tests/snapshots/shell__accurate_errors_with_bloated_floats.snap
---
source: tests/shell.rs
expression: stderr
---
Error: unexpected token: eof, expected rparen to close expression
   ╭─[accurate_errors_with_bloated_floats.tmp:2:8]
   │
 2 │ echo .(1
   │       ┬┬  
   │       ╰─── lparen found here
   │        │  
   │        ╰── error happened here
───╯

