tests/snapshots/shell__recursive_alias.snap
---
source: tests/shell.rs
expression: stderr
---
Error: command failed: No such file or directory (os error 2)

