tests/snapshots/shell__source_errors_propagate.snap
---
source: tests/shell.rs
expression: stderr
---
Error: expected vaild expression
   ╭─[__bad_tmp:1:9]
   │
 1 │ echo .(
   │         │ 
   │         ╰─ found here
───╯

