tests/snapshots/shell__unclosed_backtick.snap
---
source: tests/shell.rs
expression: stderr
---
Error: expected closing backtick
   ╭─[unclosed_backtick:1:14]
   │
 1 │ echo `echo hi
   │      ┬  
   │      ╰── for this backtick
───╯

